--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
